util/coord/GdalDataSet: Avoid using command line built with string concatenation.